testsuite/single/tests/compiler/fail/void_for_var.c
void foo() {
    for (void x = 1; ; ) ;
}
